test/tests/compiler/5_local_variables/valid/extra_credit/compound_assignment_use_result.plx
pub fn main(none) i32 {
    x: i32 = 1
    y: i32 = x += 3
    return (x == 4 and y == 4)
}
