test/tests/compiler/5_local_variables/invalid_semantics/extra_credit/prefix_incr_non_lvalue.plx
pub fn main(none) i32 {
    a: i32 = 1
    ++(a + 1)
    return false
}
